--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         Menurutnya, walaupun saat ini RE (18) selaku pelapor sudah menginjak usia dewasa, insiden yang dilaporkan terjadi pada 31 Januari, 2024, saat RE masih berusia di bawah umur.Oleh karena itu, kasus tersebut akan diproses dengan menggunakan undang-undang perlindungan anak.</p>
         “Karena kejadian dan pelaporannya di 31 Januari, saat itu pelapor masih berusia anak,” ujar Diyah kepada wartawan, Rabu (25/9/2024).</p>
 </p>
-    <img src="./Screenshot_20241009_125548_Google.jpg" width="400" height="300"
+    <img src="Screenshot_20241009_125548_Google.jpg" width="400" height="300"
         <!-- Load external JavaScript -->
         <script src="scripts.js"></script>
         
