--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
  </ul>
        
 
-        <h1>Perkenalan Kelompok</h1>
+        <h1>NESA</h1>
         <marquee> About the group</marquee>
         
         <div style="position: relative; width: 100%; height: 0; padding-top: 177.7778%;
