--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
        src="https://www.canva.com/design/DAGUrGZU4_8/EJxX6-lpgAk44AmAp1b69g/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
      </iframe>
    </div>
-   <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGUrGZU4_8&#x2F;EJxX6-lpgAk44AmAp1b69g&#x2F;view?utm_content=DAGUrGZU4_8&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Introduction Informatika Kel 8</a> by AFNI FIRDAUS
+   <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGUrGZU4_8&#x2F;EJxX6-lpgAk44AmAp1b69g&#x2F;view?utm_content=DAGUrGZU4_8&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Introduction Informatika Kel 8</a>
         
 <p >Arina as programmer's job involves writing, testing, and maintaining software code. They also analyze user requirements, design systems, and troubleshoot technical issues. Additionally, programmers often collaborate with other teams to develop applications or systems that meet business needs.
         </p>
