--- a/Contact.html
+++ b/Contact.html
@@ -32,7 +32,7 @@
 
         <!-- Load external CSS styles -->
         <link rel="stylesheet" href="styles.css">
-
+   </style>
     </head>
 
     <body>
