--- a/Contact.html
+++ b/Contact.html
@@ -1,5 +1,3 @@
-!doctype html>
-
 <html>
     <head>
         <meta charset="utf-8">
@@ -32,7 +30,7 @@
 
         <!-- Load external CSS styles -->
         <link rel="stylesheet" href="styles.css">
-   </style>
+
     </head>
 
     <body>
@@ -49,10 +47,11 @@
 
         <h1>rekomendasi film</h1>
         <marquee> Dibuat oleh Nesa</marquee>
-        Klik untuk melihat program di <a href="https://colab.research.google.com/drive/1HG0ZJfhD0wFRlAm8xdaL-VGlRxdE64LO#scrollTo=UJw_ZAjDya17&line=9&uniqifier=1">sini</a>
+        Klik untuk melihat program di <a href="https://colab.research.google.com/drive/1HG0ZJfhD0wFRlAm8xdaL-VGlRxdE64LO#scrollTo=UJw_ZAjDya17&line=9&uniqifier=1">sini</a>a>
 
         
 
 https://colab.research.google.com/drive/1HG0ZJfhD0wFRlAm8xdaL-VGlRxdE64LO#scrollTo=UJw_ZAjDya17&line=9&uniqifier=1
     </body>
 </html>
+https://arina2626.github.io/Proyek-kelompok-8/
