--- a/Contact.html
+++ b/Contact.html
@@ -10,7 +10,7 @@
             margin: 0;
             padding: 0;
             font-family: Arial, Helvetica, sans-serif;
-            background-image: url('JPEG File'); 
+            background-image: url('background.jpg'); 
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
