--- a/Contact.html
+++ b/Contact.html
@@ -10,9 +10,9 @@
             margin: 0;
             padding: 0;
             font-family: Arial, Helvetica, sans-serif;
-            background-image: url('background.jpg'); 
+            background-image: url('html.jpg'); 
             background-size: cover;
-            background-repeat: no-repeat;
+            background-repeat: repeat;
             background-position: center;
             color: #000;
         }
