--- a/Contact.html
+++ b/Contact.html
@@ -5,15 +5,15 @@
     <title>NESA</title>
 
     
-    <style>
+    <style</style>;
+            background-repeat: repeat;
+            background-position: cyle>
         body {
             margin: 0;
             padding: 0;
             font-family: Arial, Helvetica, sans-serif;
             background-image: url('html.jpg'); 
-            background-size: cover;
-            background-repeat: repeat;
-            background-position: center;
+            background-size: coenter;
             color: #000;
         }
 
@@ -28,7 +28,10 @@
             color: black;
             margin: 20px 0;
         }
-
+        ul li{
+            display:block;
+        }
+        
         nav ul {
             list-style-type: none;
             margin: 0;
