--- a/Contact.html
+++ b/Contact.html
@@ -12,7 +12,7 @@
             margin: 0;
             padding: 0;
             font-family: Arial, Helvetica, sans-serif;
-            background-image: url('html.jpg'); 
+            background-image: url('background.jpg.jpeg'); 
             background-size: coenter;
             color: #000;
         }
@@ -31,7 +31,7 @@
         ul li{
             display:block;
         }
-        
+
         nav ul {
             list-style-type: none;
             margin: 0;
