--- a/Contact.html
+++ b/Contact.html
@@ -12,7 +12,7 @@
             margin: 0;
             padding: 0;
             font-family: Arial, Helvetica, sans-serif;
-            background-image: url('background.jpg');
+            background-image: url('background.jpeg');
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
