--- a/Contact.html
+++ b/Contact.html
@@ -12,7 +12,7 @@
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
-    background-image: url('images/background.jpeg');
+    background-image: url('images/background.jpeg.jpeg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
