--- a/Contact.html
+++ b/Contact.html
@@ -84,7 +84,8 @@ main {
             <ul>
                 <li><a href="Home.html">Home</a></li>
                 <li><a href="About.html">Proses Desain</a></li>
-                <li><a href="Contact.html">Produk</a></li>
+                <!-- Link Produk diarahkan ke Gradio -->
+                <li><a href="https://5b30614ab5ea324380.gradio.live/" target="_blank">Produk</a></li>
             </ul>
         </nav>
     </header>
