--- a/Contact.html
+++ b/Contact.html
@@ -93,7 +93,7 @@ main {
     <h1>Rekomendasi Film</h1>
     <marquee>Dibuat oleh Nesa</marquee>
     
-    <p>Klik untuk melihat program di 
+    <p>Klik untuk menjalankan program di 
         <a href="https://colab.research.google.com/drive/1HG0ZJfhD0wFRlAm8xdaL-VGlRxdE64LO#scrollTo=UJw_ZAjDya17&line=9&uniqifier=1" target="_blank">
             sini
         </a>
