--- a/About.html
+++ b/About.html
@@ -23,7 +23,7 @@
  padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
  border-radius: 8px; will-change: transform;">
   <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-    src="https://www.canva.com/design/DAGTsazugE8/Hy9hXd2q6IHzTGKjlD4nKg/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+    src="https://www.canva.com/design/DAGqA1CTa0A/94lRYY137qP_lrHEejL08w/edit?utm_content=DAGqA1CTa0A&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" allowfullscreen="allowfullscreen" allow="fullscreen">
   </iframe>
 </div>
 <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGTsazugE8&#x2F;Hy9hXd2q6IHzTGKjlD4nKg&#x2F;view?utm_content=DAGTsazugE8&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Presentasi Peta Atlas dan Globe Biru Warna Warni Ilustrasi Lucu</a> oleh ARINA AULIA
