--- a/Contact.html
+++ b/Contact.html
@@ -100,9 +100,16 @@ main {
     </p>
   </div>
 
-    <h2 style="text-align: center;>Game Roket🚀</h2>
-        <p>Berikut ini adlah game roket by NESA:</p>
-        <iframe src="https://scratch.mit.edu/projects/1188315905/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+       <h2 style="text-align: center;">Game Roket🚀</h2>
+<p>Berikut ini adalah game roket by NESA:</p>
+<iframe src="https://scratch.mit.edu/projects/1188315905/embed" 
+        allowtransparency="true" 
+        width="485" 
+        height="402" 
+        frameborder="0" 
+        scrolling="no" 
+        allowfullscreen>
+</iframe>
 
 
 </body>
